fixed bug in analysis

--- a/Model_Inference_and_Evaluation/finetune_models_inference.ipynb
+++ b/Model_Inference_and_Evaluation/finetune_models_inference.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "id": "857558e9",
       "metadata": {
         "colab": {
@@ -224,7 +224,16 @@
         "id": "857558e9",
         "outputId": "f522d3b1-1d9b-455e-b6a2-b6d37d832b31"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Tanvi\\miniconda3\\envs\\nlpProject\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "from datasets import load_dataset\n",
         "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
@@ -232,8 +241,8 @@
         "import torch\n",
         "\n",
         "dataset = load_dataset(\"code_x_glue_ct_code_to_text\", \"java\")\n",
-        "model = GPT2LMHeadModel.from_pretrained(\"./gpt2-docstring-model\").to(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "tokenizer = GPT2Tokenizer.from_pretrained(\"./gpt2-docstring-model\")\n"
+        "# model = GPT2LMHeadModel.from_pretrained(\"./gpt2-docstring-model\").to(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "# tokenizer = GPT2Tokenizer.from_pretrained(\"./gpt2-docstring-model\")\n"
       ]
     },
     {
@@ -252,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "pnWn3nTYt3-a",
       "metadata": {
         "id": "pnWn3nTYt3-a"
@@ -279,7 +288,7 @@
         "        self.model_path = model_path\n",
         "        self.decoding_config = decoding_config\n",
         "        self.device = device or (\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "        if model_path.startswith(\"gpt2\"):\n",
+        "        if model_path.startswith(\"pritammane105/GPT2-Code-Summarisation\"):\n",
         "            self.tokenizer = GPT2Tokenizer.from_pretrained(model_path)\n",
         "            self.model = GPT2LMHeadModel.from_pretrained(model_path).to(self.device)\n",
         "        else:\n",
@@ -383,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "id": "-cxnNWI8_YrV",
       "metadata": {
         "id": "-cxnNWI8_YrV"
@@ -595,7 +604,24 @@
         "id": "-7LObn20_gRB",
         "outputId": "6f005747-afcc-4d62-bddf-ee384393a3e4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Running config: baseline_beam\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Map: 100%|██████████| 5183/5183 [00:19<00:00, 260.61 examples/s]\n",
+            "Generating Summaries:   0%|          | 0/324 [00:00<?, ?it/s]Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+          ]
+        }
+      ],
       "source": [
         "# Inference and Evaluation Pipeline for CodeT5\n",
         "# This script runs multiple decoding strategies on the validation and test sets\n",
@@ -628,7 +654,7 @@
         "        }\n",
         "    }\n",
         "    # Output files (local/Colab environment)\n",
-        "    if model_path.startswith(\"gpt2\"):\n",
+        "    if model_path==\"pritammane105/GPT2-Code-Summarisation\":\n",
         "        output_files = {\n",
         "            \"baseline_beam\": \"GPT2_val_predictions.csv\",\n",
         "            \"beam_repetition\": \"GPT2_val_beam_repetition.csv\",\n",
